# stock-data

./: .gitignore  AGENT.md  README.md  README.zh.md  pyproject.toml  stock_data.yaml
demos/: print_stock_300888.py  use_store_api.py
docs/: duckdb_parquet_querying.md  storage_survey_and_best_practices.md
src/stock_data/: __init__.py  __main__.py  agent_tools.py  clean_store.py  cli.py  config.py  datasets.py  pipeline.py  rate_limit.py  retry.py  runner.py  stats.py  store.py  sync_client.py  tushare_client.py  utils_dates.py  validation.py  web_service.py
src/stock_data/jobs/: __init__.py  basic.py  derived.py  etf.py  finance.py  macro.py  market.py  us.py  us_index.py
src/stock_data/storage/: __init__.py  duckdb_catalog.py  parquet_views.py  parquet_writer.py
tests/: conftest.py  test_agent_tools_integration.py  test_agent_tools_macro.py  test_agent_tools_market_extras.py  test_agent_tools_unit.py  test_agent_tools_us_disabled_by_config.py  test_config.py  test_ingestion_incremental_ranges.py  test_ingestion_state_snapshot.py  test_macro_datasets.py  test_reader_never_opens_duckdb.py  test_store_date_normalization.py  test_us_job_partition_keys.py  test_web_service_macro.py  test_web_service_market_extras.py  test_web_service_us.py  test_web_service_us_disabled_by_config.py
